--- a/.github/workflows/s3_static_web_hosting.yml
+++ b/.github/workflows/s3_static_web_hosting.yml
@@ -12,6 +12,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
+    - name: Use Node.js 
+      uses: actions/setup-node@v4
+
+    - name: Install
+      run: |
+        npm run build
+
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
