--- a/.github/workflows/s3_static_web_hosting.yml
+++ b/.github/workflows/s3_static_web_hosting.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Install
       run: |
-        npm run build
+        npm run 
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
