--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky src"
+    "prepare": "husky",
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": []
   },
   "dependencies": {
     "react": "^18.3.1",
