--- a/.github/workflows/s3_static_web_hosting.yml
+++ b/.github/workflows/s3_static_web_hosting.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - s3_github_action
 
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -29,4 +30,4 @@ jobs:
         aws-region: us-east-1
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./dist/ s3://website-backend-hosting --delete
+      run: aws s3 sync ./dist/ s3://stage.dearborncodingclub.com --delete
