--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "*.ts": []
   },
   "dependencies": {
+    "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
