--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     }
   },
   "lint-staged": {
-    "*.ts": []
+    "*.ts": [
+      "npx prettier --write",
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "lucide-react": "^0.439.0",
