--- a/package.json
+++ b/package.json
@@ -29,22 +29,25 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "globals": "^15.9.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
     "tsc-files": "^1.1.4",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.7.0",
     "vite": "^5.3.1"
   }
 }
