--- a/.github/workflows/s3_static_web_hosting.yml
+++ b/.github/workflows/s3_static_web_hosting.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
     - feature/*
-    - s3_github_action
+    - slack_ci_cd
 jobs:
-
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -26,3 +25,21 @@ jobs:
         aws-region: us-east-1
     - name: Deploy static site to S3 bucket
       run: aws s3 sync ./dist/ s3://stage.dearborncodingclub.com --delete
+
+  notify-slack:
+    runs-on: ubuntu-latest
+    needs: build  # Ensures this job runs after 'build' job is completed
+    if: always()  # Ensures the Slack notification runs regardless of build success or failure
+    
+    steps:
+      - name: Send Slack notification
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # Define the Slack Webhook URL in GitHub Secrets
+        run: |
+          STATUS="Success"
+          if [ ${{ job.status }} != "success" ]; then
+            STATUS="Failure"
+          fi
+          curl -X POST -H 'Content-type: application/json' \
+          --data "{\"text\":\"Job finished with status: *$STATUS* for repository: *${{ github.repository }}*, on branch: *${{ github.ref_name }}*\"}" \
+          $SLACK_WEBHOOK_URL
