Test slack CI/CD

--- a/.github/workflows/s3_static_web_hosting.yml
+++ b/.github/workflows/s3_static_web_hosting.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
     - feature/*
-    - slack_ci_cd
+    - Bryant/slack_ci_cd
 jobs:
   deploy:
     runs-on: ubuntu-latest
