--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "lint-staged": {
     "*.ts": [
       "npx prettier --write",
-      "eslint"
+      "eslint --fix"
     ]
   },
   "dependencies": {
