New version aws github action

--- a/.github/workflows/s3_static_web_hosting.yml
+++ b/.github/workflows/s3_static_web_hosting.yml
@@ -1,12 +1,8 @@
 name: Upload Website
 
-on:
-  pull_request:
-    branches:
-    - main
-  push:
-    branches:
-    - feature/*
+
+
+on: [push, pull_request]
     
 jobs:
   deploy:
@@ -21,7 +17,7 @@ jobs:
         npm i
         npm run build
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v3
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
