--- a/.github/workflows/s3_static_web_hosting.yml
+++ b/.github/workflows/s3_static_web_hosting.yml
@@ -1,44 +1,44 @@
-name: Upload Website
+# name: Upload Website
 
 
 
-on: [push, pull_request]
+# on: [push, pull_request]
     
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Use Node.js 
-      uses: actions/setup-node@v4
-    - name: Install
-      run: |
-        npm i
-        npm run build
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-    - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./dist/ s3://stage.dearborncodingclub.com --delete
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v1
+#     - name: Use Node.js 
+#       uses: actions/setup-node@v4
+#     - name: Install
+#       run: |
+#         npm i
+#         npm run build
+#     - name: Configure AWS Credentials
+#       uses: aws-actions/configure-aws-credentials@v3
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: us-east-1
+#     - name: Deploy static site to S3 bucket
+#       run: aws s3 sync ./dist/ s3://stage.dearborncodingclub.com --delete
 
-  notify-slack:
-    runs-on: ubuntu-latest
-    needs: deploy  # Ensures this job runs after 'build' job is completed
-    if: always()  # Ensures the Slack notification runs regardless of build success or failure
+#   notify-slack:
+#     runs-on: ubuntu-latest
+#     needs: deploy  # Ensures this job runs after 'build' job is completed
+#     if: always()  # Ensures the Slack notification runs regardless of build success or failure
     
-    steps:
-      - name: Send Slack notification
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # Define the Slack Webhook URL in GitHub Secrets
-        run: |
-          STATUS="Success"
-          if [ ${{ job.status }} != "success" ]; then
-            STATUS="Failure"
-          fi
-          curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\":\"Job finished with status: *$STATUS* for repository: *${{ github.repository }}*, on branch: *${{ github.ref_name }}*\"}" \
-          $SLACK_WEBHOOK_URL
+#     steps:
+#       - name: Send Slack notification
+#         env:
+#           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # Define the Slack Webhook URL in GitHub Secrets
+#         run: |
+#           STATUS="Success"
+#           if [ ${{ job.status }} != "success" ]; then
+#             STATUS="Failure"
+#           fi
+#           curl -X POST -H 'Content-type: application/json' \
+#           --data "{\"text\":\"Job finished with status: *$STATUS* for repository: *${{ github.repository }}*, on branch: *${{ github.ref_name }}*\"}" \
+#           $SLACK_WEBHOOK_URL
