--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-VITE_AUTH_SERVER_URL=https://auth.dearborncodingclub.com
+VITE_API_BASE_URL=http://localhost:8000
+VITE_AUTH_SERVER_URL=http://localhost:8080
